--- a/admin/workplanning/050324-Sprint1.md
+++ b/admin/workplanning/050324-Sprint1.md
@@ -2,13 +2,7 @@
 
 ## Participants
 
-- Luffy
-- John
-- Hamza
-- Daniel
-- David
-- Lebin
-- Ilan
+- Luffy, John, Hamza, Daniel, David, Lebin, Ilan
 
 ## Retrospective Review
 
