--- a/admin/workplanning/051024-Sprint2.md
+++ b/admin/workplanning/051024-Sprint2.md
@@ -67,20 +67,20 @@ Length: 1 week (5/10 ~ 5/17)
 
 #### Non Coding
 
-- [ ] **Hand-draw out the wireframes on Figma** (Priority: <span style="color:red">HIGH</span>)
+- **Hand-draw out the wireframes on Figma** (Priority: <span style="color:red">HIGH</span>)
   - Assignee: David
 
 #### Coding
 
-- [ ] **Refactoring ExerciseCard.js** (Priority: <span style="color:red">HIGH</span>)
+- **Refactoring ExerciseCard.js** (Priority: <span style="color:red">HIGH</span>)
   - Assignee: Ilan, John
-- [ ] **Code Standards** (Priority: <span style="color:yellow">MEDIUM</span>)
+- **Code Standards** (Priority: <span style="color:yellow">MEDIUM</span>)
   - Assignee: Ilan
-- [ ] **Refining CSS** (Priority: <span style="color:red">HIGH</span>)
+- **Refining CSS** (Priority: <span style="color:red">HIGH</span>)
   - Assignee: Luffy, Ryan, Hamza
-- [ ] **Code of Conduct/Rules Documents** (Priority: <span style="color:red">HIGH</span>)
+- **Code of Conduct/Rules Documents** (Priority: <span style="color:red">HIGH</span>)
   - Assignee: Luffy
-- [ ] **Start on Login/Authentication Page** (Priority: <span style="color:green">LOW</span>)
+- **Start on Login/Authentication Page** (Priority: <span style="color:green">LOW</span>)
   - Assignee: Lebin
 
 ### Conclusion / Closing Thoughts / Notes From Check-in With TA (Jason)
