--- a/admin/workplanning/051724-Sprint3.md
+++ b/admin/workplanning/051724-Sprint3.md
@@ -59,22 +59,22 @@ Length: 1 week (5/18 ~ 5/24)
 
 #### Non Coding
 
-- [ ] **Migrating Single Source of Truth** (Priority: <span style="color:red">HIGH</span>)
+- **Migrating Single Source of Truth** (Priority: <span style="color:red">HIGH</span>)
   - Moving all notes/planning in the drive to the repo
   - “Make it look pretty”
     - Assignee: John
-- [ ] **Documentation Administration (Code of conduct, ADRs, Team Page)** (Priority: <span style="color:red">HIGH</span>)
+- **Documentation Administration (Code of conduct, ADRs, Team Page)** (Priority: <span style="color:red">HIGH</span>)
   - Include doc with values, branch naming convention, team members, adr's, etc
     - Assignee: Ilan, David
 
 #### Coding
 
-- [ ] **Finish Refactoring** (Priority: <span style="color:red">HIGH</span>)
+- **Finish Refactoring** (Priority: <span style="color:red">HIGH</span>)
 
   - Abstract away the local storage
   - Assignee: Luffy, Hamza
 
-- [ ] **Testing** (Priority: <span style="color:yellow">MEDIUM</span>)
+- **Testing** (Priority: <span style="color:yellow">MEDIUM</span>)
   - Make a branch from the current refactor and see if we can make tests
   - Take inspiration from Hamza’s repo
   - Assignee: John, Daniel
