#9 added Sprint numbers

--- a/admin/workplanning/051024-Sprint2.md
+++ b/admin/workplanning/051024-Sprint2.md
@@ -55,7 +55,7 @@ Luffy, John, Hamza, Daniel, David, Lebin, Ilan
 - Wireframe needs more details
   - Only a single wireframe was completed
 
-## Current Sprint
+## Sprint 2
 
 Length: 1 week (5/10 ~ 5/17)
 
