--- a/admin/workplanning/051724-Sprint3.md
+++ b/admin/workplanning/051724-Sprint3.md
@@ -47,7 +47,7 @@ Luffy, John, Hamza, Daniel, David, Lebin, Ilan
 - Ryan is out sick (has COVID).
   - Lack of communication and not sure how much he can contribute.
 
-## Current Sprint
+## Sprint 3
 
 Length: 1 week (5/18 ~ 5/24)
 
