#16 update based on check in

--- a/admin/workplanning/052424-Sprint4.md
+++ b/admin/workplanning/052424-Sprint4.md
@@ -60,14 +60,16 @@ Length: 1 weeks (5/25 ~ 5/31)
     - Assignee: David, Luffy 
   - **Exercise Types (US4)** (Priority: <span style="color:yellow">MEDIUM</span>)
     - Assignee: Luffy, Hamza
-  **Internationalization (US5)** (Priority: <span style="color:yellow">MEDIUM</span>)
+  - **Internationalization (US5)** (Priority: <span style="color:yellow">MEDIUM</span>)
     - Assignee: Ryan
-  **Login/Logout (US1)** (Priority: <span style="color:yellow">MEDIUM</span>)
+  - **Login/Logout (US1)** (Priority: <span style="color:yellow">MEDIUM</span>)
     - Assignee: Lebin
-  **Testing Web Components (DS5)** (Priority: <span style="color:red">HIGH</span>)
-    - Assignee: Daniel, John 
+  - **Testing Web Components (DS5)** (Priority: <span style="color:red">HIGH</span>)
+    - Assignee: Daniel, John
 
 ### Conclusion / Closing Thoughts / Notes From Check-in With TA (Jason)
 
 - Considering that we have our midterm on Wednesday (5/29) and that we have to design questions for them, we want to prioritize the exam over our project for a brief period of time.
   - we aren't enforcing hard deadline on coding tasks, but we are aiming to complete as much as we can by next friday. note that we still do have some time after midterm. 
+- focusing on midterm sounds good
+- UI design to make it look more modern
